--- a/wui/static/ezcollcustom.html
+++ b/wui/static/ezcollcustom.html
@@ -122,6 +122,7 @@
         ezc-title {
             flex: 1 1 auto;
             padding-right: 1rem;
+            font-size: 1.7rem;
         }
 
         ezc-title > a {
