EZ-1222 ezcoll improve colors

--- a/wui/static/ezcollcustom.html
+++ b/wui/static/ezcollcustom.html
@@ -16,10 +16,9 @@
             --ez-icon-action-col: rgba(0, 0, 0, .54);
             --ez-icon-action-active-col: rgba(0, 0, 0, .87);
             --ez-icon-action-disabled-col: rgba(0, 0, 0, .38);
-            --ezc-link-hover-col: #039be5;
+            --ezc-link-hover-col: #429748;
             --ezc-attr-immutable-col: rgba(0, 0, 0, .54);
             --ezc-attr-mutable-col: rgba(0, 0, 0, .73);
-            --ezc-attr-change-col: rgba(0, 0, 0, .93);
         }
 
         svg {
@@ -201,7 +200,7 @@
         }
         ezc-attr-text.mutable:hover {
             cursor: pointer;
-            color: var(--ezc-attr-change-col);
+            font-weight: 500;
         }
 
         /* If attrs should take up all space */
@@ -411,7 +410,7 @@
                             <ezc-fold-key>Top attr key</ezc-fold-key>:
                             <ezc-fold-value>
                                 <ezc-attr-text class="immutable" title="Top attr key">
-                                    Paremal
+                                    11.09.20, 11:11
                                 </ezc-attr-text>
                             </ezc-fold-value>
                         </ezc-fold-attr>
