wui  missing assessment svg optimising fix

--- a/wui/static/adhocpoc.html
+++ b/wui/static/adhocpoc.html
@@ -25,7 +25,7 @@
                         <a href="#!" data-target="leftbar" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     </div>
                     <a href="/courses" class="logo">
-                        <img class="img" src="img/main-logo.svg" alt="Lahendus"/>
+                        <img class="img" src="img/inline-icons/optimised/main-logo-op.svg" alt="Lahendus"/>
                         <span class="text">LAHENDUS</span>
                     </a>
                 </div>
