--- a/wui/static/autoassessloadingpoc.html
+++ b/wui/static/autoassessloadingpoc.html
@@ -337,7 +337,7 @@
     <div id="nav-wrap">
         <nav class="nav-center" role="navigation">
             <div class="nav-wrapper">
-                <a href="/courses" class="brand-logo left"><img class="logo-img" src="img/main-logo.svg" alt="Lahendus"></a>
+                <a href="/courses" class="brand-logo left"><img class="logo-img" src="img/inline-icons/optimised/main-logo-op.svg" alt="Lahendus"></a>
                 <ul id="nav-mobile" class="hide-on-med-and-down">
                     <li><a class="nav-link" href="/courses">Minu kursused</a></li>
                 </ul>
