--- a/wui/static/editorpoc.html
+++ b/wui/static/editorpoc.html
@@ -19,7 +19,7 @@
     <nav class="nav-center" role="navigation">
         <div class="container">
             <a href="#!" class="brand-logo left">
-                <img class="logo-img" src="img/main-logo.svg" alt="Lahendus"/>
+                <img class="logo-img" src="img/inline-icons/optimised/main-logo-op.svg" alt="Lahendus"/>
                 <span class="logo-text">LAHENDUS</span>
             </a>
             <ul id="nav-mobile" class="hide-on-med-and-down">
