--- a/wui/static/ezcollcustom.html
+++ b/wui/static/ezcollcustom.html
@@ -306,7 +306,7 @@
                         <a id="sidenav-toggle" href="#!" class="sidenav-toggle"><i class="material-icons">menu</i></a>
                     </div>
                     <a href="/courses" class="logo">
-                        <img class="img" src="img/main-logo.svg" alt="Lahendus">
+                        <img class="img" src="img/inline-icons/optimised/main-logo-op.svg" alt="Lahendus">
                         <span class="text">LAHENDUS</span>
                     </a>
                 </div>
