--- a/wui/static/subgridpoc.html
+++ b/wui/static/subgridpoc.html
@@ -109,7 +109,7 @@
                             <span class="col s4 deadline">18. jaanuar 2019, 12.42</span>
                             <span class="col s2 grade">
                                 <span>-/100</span
-                                ><img class="eval-logo-missing" src="img/missing-logo.svg" alt="{{missingLabel}}"/>
+                                ><img class="eval-logo-missing" src="img/missing-ass.svg" alt="{{missingLabel}}"/>
                             </span>
                         </div>
                         <div class="bb">
@@ -165,7 +165,7 @@
                             <span class="col s2">#2</span>
                             <span class="col s7" style="text-align: center">18. jaanuar 2019, 12.42</span>
                             <span class="col s3 flex" style="justify-content: flex-end; align-items: center">
-                                <span>0/100</span><img class="eval-logo-missing" src="img/missing-logo.svg" alt="{{missingLabel}}"/>
+                                <span>0/100</span><img class="eval-logo-missing" src="img/missing-ass.svg" alt="{{missingLabel}}"/>
                             </span>
                             <div class="bb sm">
                                 <span class="bb-item sm bb-green"></span>
